# mpc-rbt-student

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json  example_receiver.service  example_sender.service  package.xml  prikazy.txt  rosdep.yaml  run_receiver.sh  run_sender.sh  service_session.yml
.github/workflows/: test.yml
assignments/lab_02/: .clang-format  build.sh.save  config.json  debug_session.yml  example_receiver.service  instructions.md
assignments/lab_02/include/mpc-rbt-solution/: Sender.hpp
assignments/lab_02/include/mpc-rbt-solution/util/: Socket.hpp  Utils.hpp
assignments/lab_02/src/: Sender.cpp  receiver_node.cpp  sender_node.cpp
assignments/lab_02/tests/: CMakeLists.txt  solutionTest.cpp
behavior_trees/: warehouse_mission.xml
cpp_srvcli/: CMakeLists.txt  package.xml
include/: Localization.hpp  MotionControl.hpp
include/mpc-rbt-solution/: Receiver.hpp  Sender.hpp
launch/: record_battery.launch.py  solution.launch.py
launch/rosbag2_2026_03_10-18_00_37/: metadata.yaml  rosbag2_2026_03_10-18_00_37_0.db3
src/: KeyboardControl.cpp  Localization.cpp  MotionControl.cpp  Planning.cpp  Receiver.cpp  Sender.cpp  planning_node.cpp
src/bt/: ConfirmLoadingService.cpp  GetDropoffService.cpp  GetTaskService.cpp  LookupPose.cpp  NavigateToPoseAction.cpp  bt_server.cpp
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: publisher_member_function.cpp
src/util/: Socket.cpp  Utils.cpp
